src/include/acp.h


extern int acp_init(int *argc, char ***argv);
extern int acp_finalize(void);
extern int acp_sync(void);
extern int acp_rank(void);
extern int acp_procs(void);
#define ACP_GA_NULL     0LLU
typedef uint64_t acp_atkey_t;
typedef uint64_t acp_ga_t;
extern acp_ga_t acp_query_starter_ga(int rank);
extern acp_atkey_t acp_register_memory(void *addr, size_t size, int color);
extern int acp_unregister_memory(acp_atkey_t atkey);
extern acp_ga_t acp_query_ga(acp_atkey_t atkey, void *addr);
extern void* acp_query_address(acp_ga_t ga);
extern int acp_query_rank(acp_ga_t ga);
typedef int64_t acp_handle_t;
extern acp_handle_t acp_copy(acp_ga_t dst, acp_ga_t src, 
			     size_t size, acp_handle_t order);
extern acp_handle_t acp_cas4(acp_ga_t dst, acp_ga_t src, uint32_t oldval,
			     uint32_t newval, acp_handle_t order);
extern acp_handle_t acp_cas8(acp_ga_t dst, acp_ga_t src, uint64_t oldval,
			     uint64_t newval, acp_handle_t order);
extern acp_handle_t acp_add8(acp_ga_t dst, acp_ga_t src, 
			     uint64_t value, acp_handle_t order);
extern void acp_complete(acp_handle_t handle);
extern int acp_inquire(acp_handle_t handle);
typedef struct chitem *acp_ch_t;
extern acp_ch_t acp_create_ch(int sender, int receiver);
extern int acp_free_ch(acp_ch_t ch);
extern acp_ga_t acp_malloc(size_t size, int rank);
extern void acp_free(acp_ga_t ga);
typedef struct {
    acp_ga_t ga;
    size_t size;
} acp_element_t;
typedef struct {
    acp_element_t first;
    acp_element_t second;
} acp_pair_t;
typedef struct {
    acp_ga_t ga;
} acp_list_t;     
extern void acp_merge_list(acp_list_t list1, acp_list_t list2, int (*comp)(const acp_element_t elem1, const acp_element_t elem2));
extern void acp_sort_list(acp_list_t list, int (*comp)(const acp_element_t elem1, const acp_element_t elem2));
typedef struct {
    acp_ga_t ga;
    uint64_t num_ranks;
    uint64_t num_slots;
} acp_multiset_t;	
typedef struct {
    acp_multiset_t set;
    int rank;
    int slot;
    acp_ga_t elem;
} acp_multiset_it_t;	
extern acp_multiset_it_t acp_begin_local_multiset(acp_multiset_t set);
extern acp_multiset_it_t acp_begin_multiset(acp_multiset_t set);
extern acp_multiset_t acp_create_multiset(int num_ranks, const int* ranks, int num_slots, int rank);
extern void acp_destroy_multiset(acp_multiset_t set);
extern acp_multiset_it_t acp_end_local_multiset(acp_multiset_t set);
extern acp_multiset_it_t acp_end_multiset(acp_multiset_t set);
extern int acp_insert_multiset(acp_multiset_t set, acp_element_t key);
extern void acp_remove_multiset(acp_multiset_t set, acp_element_t key);
extern uint64_t acp_retrieve_multiset(acp_multiset_t set, acp_element_t key);
extern size_t acp_size_local_multiset(acp_multiset_t set);
extern acp_element_t acp_dereference_multiset_it(acp_multiset_it_t it);
extern acp_multiset_it_t acp_increment_multiset_it(acp_multiset_it_t it);
typedef struct {
    acp_ga_t ga;
    uint64_t num_ranks;
    uint64_t num_slots;
} acp_map_t;	
typedef struct {
    acp_map_t map;
    int rank;
    int slot;
    acp_ga_t elem;
} acp_map_it_t;	
extern acp_map_it_t acp_begin_map(acp_map_t map);
extern void acp_clear_map(acp_map_t map);
extern acp_map_t acp_create_map(int num_ranks, const int* ranks, int num_slots, int rank);
extern acp_map_it_t acp_end_map(acp_map_t map);
extern acp_map_it_t acp_find_map(acp_map_t map, acp_element_t key);
extern int acp_insert_map(acp_map_t map, acp_pair_t pair);
extern void acp_remove_map(acp_map_t map, acp_element_t key);
extern size_t acp_retrieve_map(acp_map_t map, acp_pair_t pair);
extern size_t acp_size_local_map(acp_map_t map);
extern acp_pair_t acp_dereference_map_it(acp_map_it_t it);
extern acp_map_it_t acp_increment_map_it(acp_map_it_t it);